# shimmer3_ble

./: pyproject.toml
examples/: stream_and_decode_data_packets.py
shimmer3_ble/: shimmer3.py
